--- a/Day2/06 Exercise.ipynb
+++ b/Day2/06 Exercise.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0dd3d790",
+   "id": "7794f93e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fd894305",
+   "id": "94593daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5c48c816",
+   "id": "e1e51d15",
    "metadata": {},
    "outputs": [
     {
@@ -125,20 +125,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3847ced4",
+   "id": "ba40c693",
    "metadata": {},
    "source": [
     "# Exercise\n",
     "\n",
     "- The goal is to find a model that predicts `district` as a function of the other columns.\n",
     "- Train a decision tree classifier: Find the best possible decision tree varying the parameter `max_depth`.\n",
-    "- Train a random forest classifier: Find the best poossible random forest varying the parameters `max_depth` and `n_estimators`."
+    "- Train a random forest classifier: Find the best possible random forest varying the parameters `max_depth` and `n_estimators`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "addb1aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Srodmiescie', 'Bielany', 'Praga', 'Ochota', 'Mokotow', 'Ursus',\n",
+       "       'Zoliborz', 'Wola', 'Bemowo', 'Ursynow'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['district'].unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c137bd6",
+   "id": "3779d81c",
    "metadata": {},
    "outputs": [],
    "source": []
