--- a/demos/Day3/HuggingFace - Fine Tuning.ipynb
+++ b/demos/Day3/HuggingFace - Fine Tuning.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4d39c5ff",
    "metadata": {},
    "outputs": [
@@ -164,8 +164,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='203' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [203/375 23:33 < 20:09, 0.14 it/s, Epoch 1.62/3]\n",
+       "      <progress value='375' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [375/375 47:09, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -183,6 +183,18 @@
        "      <td>1.333629</td>\n",
        "      <td>0.423000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>1.057478</td>\n",
+       "      <td>0.550000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>1.018850</td>\n",
+       "      <td>0.590000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -192,6 +204,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=375, training_loss=1.0422218424479166, metrics={'train_runtime': 2836.9657, 'train_samples_per_second': 1.057, 'train_steps_per_second': 0.132, 'total_flos': 789354427392000.0, 'train_loss': 1.0422218424479166, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
