--- a/demos/Day3/09 Reinforcement Learning.ipynb
+++ b/demos/Day3/09 Reinforcement Learning.ipynb
@@ -66,36 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -q tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gym'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#from tqdm import tqdm\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgym\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#create a single game instance\u001b[39;00m\n\u001b[0;32m      5\u001b[0m env \u001b[38;5;241m=\u001b[39m gym\u001b[38;5;241m.\u001b[39mmake(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFrozenLake-v0\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'gym'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#from tqdm import tqdm\n",
     "import gym\n",
     "\n",
     "#create a single game instance\n",
-    "env = gym.make(\"FrozenLake-v0\")\n"
+    "env = gym.make(\"FrozenLake-v1\")\n"
    ]
   },
   {
@@ -122,9 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The initial state:  (0, {'prob': 1})\n",
+      " and it looks like: \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nobleprog/Desktop/ml-bespoke/env/lib/python3.10/site-packages/gym/envs/toy_text/frozen_lake.py:271: UserWarning: \u001b[33mWARN: You are calling render method without specifying any render mode. You can specify the render_mode at initialization, e.g. gym(\"FrozenLake-v1\", render_mode=\"rgb_array\")\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The initial state: \", env.reset())\n",
     "print(\" and it looks like: \")\n",
@@ -133,13 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now let's take an action: \n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Now let's take an action: \")\n",
     "env.reset()\n",
-    "new_state, reward, done, _ = env.step(1)\n",
+    "new_state, reward, done, prob, _ = env.step(1)\n",
     "env.render()\n",
     "\n",
     "\n",
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,21 +193,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, {'prob': 1})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate(env, policy, max_episodes=100): \n",
     "    tot_reward = 0\n",
     "    for ep in range(max_episodes):\n",
-    "        state = env.reset()\n",
+    "        state = env.reset()[0]\n",
     "        done = False\n",
     "        ep_reward = 0\n",
     "        \n",
     "        # Reward per episode\n",
     "        while not done:\n",
     "            action = policy[state]\n",
-    "            new_state, reward, done, _ = env.step(action)\n",
+    "            new_state, reward, done, _, _ = env.step(action)\n",
     "            ep_reward += reward\n",
     "            state = new_state\n",
     "            if done:\n",
@@ -386,13 +410,6 @@
     "- Beat the hill climbing / random search benchmark! Implement a different search method for the parameters.\n",
     "- Try the `CartPole` environment. In `CartPole`, the state is continuous (4 different parameters), so you need to do something on the lines of the parameterized random search example. Look at http://kvfrans.com/simple-algoritms-for-solving-cartpole/ for inspiration."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -411,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
